[package]
name = "duplicate-image-finder-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
rfd = "0.12.0"
walkdir = "2"
image = "0.24.7"
imageproc = "0.23.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
tokio = { version = "1.33.0", features = ["rt"] }