[package]
name = "duplicate-image-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.0"
egui_extras = { version = "0.26.0", features = ["all_loaders"] }
rfd = "0.13.0"
walkdir = "2.4.0"
image = "0.24.8"
imageproc = "0.23.0"
threadpool = "1.8.1"
num_cpus = "1.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"